[package]
name = "debtswithfriends"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.52.0"
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"